--- a/thingspeak/api.json.example
+++ b/thingspeak/api.json.example
@@ -1,13 +1,18 @@
 {
   "channels": [{
-      "ID": "000000",
-      "writeAPI": "XXXXXXXXXXXXXXXX",
-      "readAPI": "YYYYYYYYYYYYYYYY"
+      "ID": "789145",
+      "writeAPI": "4P7ALDEHKRJ054OI",
+      "readAPI": "KIN20YJPVTAY4JJR"
     },
     {
-      "ID": "123456",
-      "writeAPI": "XXXXXXXXXXXXXXXX",
-      "readAPI": "YYYYYYYYYYYYYYYY"
+      "ID": "791968",
+      "writeAPI": "OUH1V5LQ9IAGQRV7",
+      "readAPI": "X87MLHDH1TH571LD"
+    },
+    {
+      "ID": "791970",
+      "writeAPI": "JW10IMHQK9CG55WG",
+      "readAPI": "GIBOWUYHYBRVNUWL"
     }
   ]
 }
