--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,18 @@
 [tool.poetry]
-name = "temp"
+name = "mainproject"
 version = "0.1.0"
-description = ""
-authors = ["paolo-26 <paolo.1995@ymail.com>"]
+description = "IoT for smart gardening. Programming for IoT applications. Politecnico di Torino. ICT4SS."
+authors = [
+    "paolo-26 <paolo.1995@ymail.com>",
+    "jackrende",
+    "haraldmeister <edo.fassio@gmail.com>",
+    "marzia1810"
+]
+license = "GPL-3.0-or-later"
+readme = "README.md"
+repository = "https://github.com/iotprojectMPEG/mainproject"
+documentation = "https://github.com/iotprojectMPEG/mainproject"
+homepage = "https://github.com/iotprojectMPEG/mainproject"
 
 [tool.poetry.dependencies]
 python = "^3.7"
