--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "mainproject"
+name = "smartgarden"
 version = "0.1.0"
 description = "IoT for smart gardening. Programming for IoT applications. Politecnico di Torino. ICT4SS."
 authors = [
@@ -10,9 +10,9 @@ authors = [
 ]
 license = "GPL-3.0-or-later"
 readme = "README.md"
-repository = "https://github.com/iotprojectMPEG/mainproject"
-documentation = "https://github.com/iotprojectMPEG/mainproject"
-homepage = "https://github.com/iotprojectMPEG/mainproject"
+repository = "https://github.com/iotprojectMPEG/smartgarden"
+documentation = "https://github.com/iotprojectMPEG/smartgarden"
+homepage = "https://github.com/iotprojectMPEG/smartgarden"
 
 [tool.poetry.dependencies]
 python = "^3.6"
